<resources>
    <string name="app_name">EShop</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="messages">Messages</string>
    <string name="categories">categories</string>
    <string name="cart">cart</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">navigation_drawer_open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>