<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/side_nav_home"
android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"
            android:checked="true"
            />
        <item
            android:id="@+id/side_nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:visible="false"
            />
        <item
            android:id="@+id/side_nav_orders"
            android:title="@string/orders"
            android:icon="@drawable/ic_baseline_list_24"
            android:visible="false"
            />
        <item
            android:id="@+id/side_nav_wishlist"
            android:title="@string/wishlist"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:visible="false"

            />
        <item
            android:id="@+id/side_nav_messages"
            android:title="@string/messages"
            android:icon="@drawable/ic_baseline_message_24"
android:visible="false"
            />




    </group>


<group android:id="@+id/group_auth">
<item
    android:id="@+id/side_nav_login"
    android:title="@string/login"
    android:icon="@drawable/ic_baseline_login_24"
    />
    <item
        android:id="@+id/side_nav_logout"
        android:title="@string/logout"

        android:icon="@drawable/ic_baseline_close_24"
        android:visible="false"
        />

</group>

</menu>